bugfix scss navbar-collapse
navbar had a negative margin of -35 for some reason

--- a/public/scss/navbar.scss
+++ b/public/scss/navbar.scss
@@ -55,16 +55,11 @@
     position: relative;
     z-index: 1;
     .navbar-collapse {
-      margin: 0 -35px;
+      // margin: 0 -35px;
     }
   }
   .navbar-brand {
-    // background: transparent;
     padding: 3px 0 0 22px;
-  //   img {
-  //   position: relative;
-  //   z-index: 1;
-  // }
     span {
       height: .5px;
       width: .5px;
